--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>html</title>
+    <link rel="stylesheet" href="assets/style/normalize.css" />
+    <link rel="stylesheet" href="assets/style/style.css" />
   </head>
-  <body></body>
+  <body class="container">
+    <header class="header">
+      <div class="none">[Шапка страницы]</div>
+    </header>
+
+    <main class="main">
+      <section class="section">
+        <div class="sone">[Основная часть]</div>
+        <div class="stwo">[Еще 1]</div>
+        <div class="sfree">[Еще 2]</div>
+        <div class="sfour">[Еще 3]</div>
+      </section>
+
+      <aside class="aside">
+        <div>[Боковая область]</div>
+      </aside>
+    </main>
+
+    <footer class="footer">
+      <div class="fone">[Секция футера 1]</div>
+      <div class="fone">[Секция футера 2]</div>
+      <div class="fone">[Секция футера 3]</div>
+      <div class="fone">[Секция футера 4]</div>
+    </footer>
+  </body>
 </html>
